fixed contact us page float issues on mobile and tablet sizes

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -13,12 +13,20 @@
     width: 20rem;
   }
 }
-
 .rtl {
   direction: rtl;
 }
 
-.rtl.rtlText {
+.rtlText {
   float: right;
   text-align: right;
+}
+@media (max-width: 63.99em) {  
+  .usa-nav__primary {
+    margin-top: 1.5rem;
+    clear: both;
+  }
+  .rtlText {
+    float: none;
+  }
 }
